--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-See the description in the Contao extension repository for more information
-http://contao.org/de/extension-list/view/Inxmail.10000019.de.html
+See the description in the Contao extension repository for more information and installation instructions
+https://contao.org/de/extension-list/view/Inxmail.10000029.de.html
